--- a/assets/css/style_stickers.css
+++ b/assets/css/style_stickers.css
@@ -2,6 +2,14 @@ img {
     width: 300px;
     height: 300px;
 }
+.layout{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.layout p{
+    font-size: 20px;
+}
 
 .container{
     display: grid;
@@ -21,4 +29,5 @@ input{
 }
 button{
     font-size: large;
+    border-radius: 5px;
 }
